# bear-formatter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: distribution.md  rules.md
homebrew/: bear-formatter.rb
src/: cli.rs  config.rs  lib.rs  main.rs
src/bear/: mod.rs
src/engine/: ignore.rs  mod.rs
src/rules/: final_newline.rs  footnotes.rs  heading_levels.rs  headings.rs  horizontal_rules.rs  layout.rs  line_endings.rs  list_markers.rs  mod.rs  support.rs  tables.rs  tags.rs  title_case.rs  typography.rs  whitespace.rs
tests/: integration.rs
