[package]
name = "bear-formatter"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "A cute little formatter for Bear notes 🐻"
license = "MIT"
repository = "https://github.com/chasefinch/bear-formatter"
readme = "README.md"

[[bin]]
name = "bear-formatter"
path = "src/main.rs"

[lib]
name = "bear_formatter"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
pulldown-cmark = { version = "0.12", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
thiserror = "2.0"
anyhow = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
