[package]
name = "bear-formatter"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "A cute little formatter for Bear notes 🐻"
license = "MIT"
repository = "https://github.com/chasefinch/bear-formatter"
readme = "README.md"

[[bin]]
name = "bear-format"
path = "src/main.rs"

[lib]
name = "bear_formatter"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
pulldown-cmark = { version = "0.13", default-features = false }
thiserror = "2.0"
anyhow = "1.0"
dirs = "5.0"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
